--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,8 @@ body{
     margin: 0;
     box-sizing: border-box;
     font-family: sans-serif;
+    display: flex;
+    flex-direction: column;
 }
 
 .section-one{
@@ -61,4 +63,43 @@ body{
     justify-content: center;
     align-items: center;
     height: 250px;
+}
+
+.section-two{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 30px 0;
+}
+
+.card-container{
+    display: flex;
+    gap: 90px;
+    flex-wrap: wrap;
+}
+
+.card-image{
+    border: #3882f6 solid;
+    padding: 80px;
+    border-radius: 5px;
+
+}
+
+.card{
+    width: 150px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.footer{
+    background-color: #1f2937;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 65px;
 }
