--- a/styles.css
+++ b/styles.css
@@ -77,6 +77,9 @@ body{
     display: flex;
     gap: 90px;
     flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+
 }
 
 .card-image{
@@ -99,6 +102,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 350px;
 }
 .quote{
     font-size: 36px;
@@ -110,6 +114,36 @@ body{
 .quote > i{
     color:rgb(87, 94, 92);
 
+}
+
+.section-four{
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 350px;
+}
+
+.call-to-action{
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #3882f6;
+    border: #3882f6 4px;
+    border-radius: 10px;
+    padding: 20px 40px;
+    flex: 0 1 1000px;
+}
+
+
+button{
+    background-color: #3882f6;
+    color: white;
+    border-radius: 5px;
+    font-size: 18px;
+    padding: 0 40px;
+    border: 2px solid #ffffff;
 }
 
 .footer{
